--- a/src/styles/sections/news.scss
+++ b/src/styles/sections/news.scss
@@ -117,7 +117,11 @@
 
             }
         }
+        @media screen and (max-width: 650px ){
+            
+        }
     }
+    
 }
 
 .network1 {
@@ -185,6 +189,7 @@
         }
         @media screen and (max-width: 650px ) {
             margin-top: 70px;
+            
             .instagram-2 {
                 display: none;
             }
@@ -193,3 +198,101 @@
 
     }
 }
+
+
+// .portfolio {
+//     padding: 5rem 0;
+//     display: none;
+//     @media screen and (max-width: 650px ) {
+//         display: flex;
+//     }
+// }
+//     .portfolio-content {
+//       position: relative;
+//       height: 775px;
+//       margin: 0 auto;
+//       display: block; }
+     
+//     .portfolio-item {
+//       position: absolute;
+//       top: 50%;
+//       left: 50%;
+//       -webkit-transform: translate(-50%, -50%);
+//       transform: translate(-50%, -50%);
+//       width: 100%;
+//       opacity: 0;
+//       -webkit-transition: opacity .5s ease;
+//       transition: opacity .5s ease; }
+//       .portfolio-item img {
+//         height: auto;
+//         width: 100%;
+//         position: absolute;
+//         top: 50%;
+//         left: 50%;
+//         -webkit-transform: translate(-50%, -50%);
+//         transform: translate(-50%, -50%); }
+//       .portfolio-item-active {
+//         opacity: 1;
+//         -webkit-transition: opacity .5s ease;
+//         transition: opacity .5s ease; }
+//     .portfolio-btn {
+//       position: absolute;
+//       cursor: pointer;
+//       top: 50%;
+//       z-index: 5;
+//       width: 50px;
+//       height: 50px;
+//       background-color: rgba(0, 0, 0, 0.5);
+//       background-repeat: no-repeat;
+//       background-size: 34px;
+//       border-radius: 50%;
+//       -webkit-transition: background-color 0.2s ease;
+//       transition: background-color 0.2s ease; }
+//       .portfolio-btn.prev {
+//         left: 20px;
+//         background-image: url("../images/icons/left-arrow.svg");
+//         background-position: 25% 50%; }
+//       .portfolio-btn.next {
+//         right: 20px;
+//         background-image: url("../images/icons/right-arrow.svg");
+//         background-position: 75% 50%; }
+//       .portfolio-btn:hover {
+//         background-color: rgba(0, 0, 0, 0.8);
+//         -webkit-transition: background-color 0.2s ease;
+//         transition: background-color 0.2s ease; }
+//     .portfolio-dots {
+//       position: absolute;
+//       bottom: 20px;
+//       width: 100%;
+//       margin: 0 auto;
+//       margin-top: 20px;
+//       display: -webkit-box;
+//       display: -ms-flexbox;
+//       display: flex;
+//       -webkit-box-pack: center;
+//       -ms-flex-pack: center;
+//       justify-content: center;
+//       z-index: 5; }
+//       .portfolio-dots .dot {
+//         cursor: pointer;
+//         height: 16px;
+//         width: 16px;
+//         margin: 0 10px;
+//         border-radius: 50%;
+//         border: solid #fff;
+//         display: inline-block;
+//         -webkit-transition: background-color, -webkit-transform 0.4s ease;
+//         transition: background-color, -webkit-transform 0.4s ease;
+//         transition: background-color, transform 0.4s ease;
+//         transition: background-color, transform 0.4s ease, -webkit-transform 0.4s ease; }
+//         .portfolio-dots .dot-active {
+//           background-color: #19b5fe;
+//           -webkit-transform: scale(1.2);
+//           transform: scale(1.2); }
+//         .portfolio-dots .dot:hover {
+//           background-color: #53c6fe;
+//           -webkit-transform: scale(1.2);
+//           transform: scale(1.2); 
+        
+//         }
+  
