--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -88,10 +88,11 @@ header {
   left: 0;
   padding: 100px 20px 0 30px;
   font-family: "SourceSansPro-Bold";
-  font-size: 16px;
+  font-size: 20px;
   text-transform: uppercase;
+  color: #ffffff;
   transition-duration: 0.5s;
-  background-color: #ebecee;
+  background-color: #25c0abd8;
   animation-fill-mode: forwards;
   z-index: 11;
 
@@ -168,71 +169,7 @@ header {
   z-index: -1;
   filter: blur(41px);
 }
-// .wr-header {
-//     height: 100vh;
-// }
 
-/*== Управление бургером =========*/
-// .nav-toggle {
-//   display: none;
-// }
-// .nav-toggle-label {
-// position: absolut;
-// display: none;
-// flex-direction: column;
-// height: 31px;
-// cursor: pointer;
-// }
-// .burger__line {
-// width: 25px;
-// height: 3px;
-// margin: 3px;
-// background-color: #000;
-// transition: 0.3s;
-// }
-// .burger__line--two {
-// transition: 0s;
-// }
-// .nav-toggle-label.active .burger__line--one {
-// transform: rotate(-45deg) translate(-6px, 7px);
-// }
-// .nav-toggle-label.active .burger__line--two {
-// visibility: hidden;
-// }
-// .nav-toggle-label.active .burger__line--tree {
-// transform: rotate(45deg) translate(-5px, -7px);
-// }
-// @media screen and (max-width: 768px) {
-//   .nav-bar {
-//     height: 50px;
-//     padding: 0;
-//     justify-content: space-between;
-//     align-items: center;
-//     background-color: rgba(20, 49, 31, 0.5);
-// }
-// .nav-toggle-label {
-//     display: flex;
-// }
-// .main-menu {
-//     position: absolute;
-//     text-align: center;
-//     background: rgba(0, 0, 0, 0.95);
-//     top: 50px;
-//     left: 0;
-//     width: 0;
-//     z-index: 2;
-//     transform: scaleX(0);
-//     transform-origin: left;
-//     transition: 0.3s ease;
-// }
-
-// .main-menu__link {
-//     display: block;
-//     color: deepskyblue;
-//     padding: 20px;
-//     font-size: 18px;
-// }
-// }
 
 @media screen and (max-width: 768px) {
   header {
