--- a/src/styles/sections/news.scss
+++ b/src/styles/sections/news.scss
@@ -1,3 +1,4 @@
+
 .wrapper-news {
     padding-top: 150px;
      padding-bottom: 200px;
@@ -189,8 +190,6 @@
            
         }
         @media screen and (max-width: 650px ) {
-            margin-top: 70px;
-            
             .instagram-2 {
                 display: none;
             }
@@ -198,6 +197,19 @@
 
 
     }
+    // .single-item {
+    //     visibility: hidden;
+    //     height: 0;
+     
+    //     @media screen and (max-width: 650px ) {
+    //         padding-top: 90px;
+    //         padding-left: 5%;
+    //         padding-right: 5%;
+    //         height: auto;
+    //         width: 300px;
+    //         visibility: visible;
+    //      }
+    // }
 }
 
 
