--- a/src/styles/sections/modal.scss
+++ b/src/styles/sections/modal.scss
@@ -1,13 +1,14 @@
-.help-card__inner {
-    padding: 27px 30px 30px;
-  background: #FFFFFF;
-box-shadow: 2px 4px 10px rgba(81, 102, 102, 0.3);
-border-radius: 30px;
+.help-form {
+    display: flex;
+    flex-direction: column;
+    vertical-align: baseline;
 }
 
 .help-card {
     max-width: 755px;
     margin: 70px auto 0;
+    border-radius: 30px;
+    box-shadow: 2px 4px 10px rgba(81, 102, 102, 0.3);
 }
 
 .help-form__radio-label {
@@ -25,26 +26,43 @@ border-radius: 30px;
     line-height: 26px;
     transition: background-color 200ms ease, color 200ms ease;
 }
+.help-form__row {
+    margin-bottom: 15px;
+    .help-form__list {
+        display: flex;
+        // flex-direction: row;
+        flex-wrap: wrap;
+        margin-bottom: -2px;
+        
+    }
+}
 
-.help-form__radio-input {
-    position: absolute;
-    opacity: 0;
-    visibility: hidden;
-    z-index: -1;
-}
-.help-form__list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: -2px;
-    
-}
+
 .help-form__list-item {
-    width: calc(25% - 2px);
-    margin: 0 2px 2px 0;
+    width: calc(50% - 2px);
+    margin: 0px 2px 2px 0;
     display: block;
+    
 }
 .help-form__radio {
     position: relative;
+    .help-form__radio-input {
+        position: absolute;
+        opacity: 0;
+        visibility: hidden;
+        z-index: -1;
+    }
+    .help-form__radio-label {
+        height: 60px;
+        display: flex;
+        flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0%;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        line-height: 26px;
+    }
 }
 
 .help-form__input {
@@ -64,6 +82,18 @@ border-radius: 30px;
     font-weight: 900;
     transition: background-color 200ms ease, color 200ms ease;
 }
+.help-form__list-item:last-child {
+        width: calc(25% - 2px);
+}
 .help-form__row_bottom-medium {
     margin-bottom: 30px;
+    margin-top: 30px;
+    padding: 100px 30px 15px 30px;
+}
+.help-form__input-group-item {
+    margin-right: 2px;
+    position: relative;
+}
+.button_large {
+    margin-top: 30px;
 }
