--- a/src/styles/sections/event.scss
+++ b/src/styles/sections/event.scss
@@ -11,19 +11,68 @@
     padding-top: 0%;
   }
 
+  .event-link {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 15%;
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+
+    padding-bottom: 100px;
+
+    a {
+      text-decoration: underline;
+      // text-decoration-style: dotted;
+      color: #0B6B6B;
+    }
+
+    @media screen and (max-width: 650px) {
+      font-size: 20px;
+    }
+  }
+
+  .events {
+    background-image: url(/images/bg-history-2.png),
+    url(/images/bg-history.png),
+    url(/images/bg-wr-team-2.png);
+    background-repeat: no-repeat;
+    background-position: right top,
+    left top 45%,
+    left top 100%;
+
+    background-size: 35% 70%, auto, auto;
+
+    padding-bottom: 150px;
+    padding-top: 100px;
+  }
+
+  @media screen and (max-width: 1024px) {
+    .wrapper-event {
+      height: 100%;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .wrapper-event {
+      height: 100%;
+      padding-bottom: 0;
+    }
+  }
+}
 
 .accordion {
-  padding-top: 100px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding-inline-start: 0px;
   @media screen and (max-width: 650px) {
     padding-top: 50px;
   }
 }
+
 .accordion-item {
   width: 100%;
   background: #ffffff38;
@@ -73,7 +122,6 @@
   .time {
     @media all and (max-width: 550px) {
       display: none;
-
     }
   }
 
@@ -123,17 +171,6 @@
 }
 
 .acc-content-container {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-
-  padding: 40px;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-
-  //margin-top: calc(-106% + 113px);
-  //transition: all 0.35s;
-  z-index: 0;
 
   .acc-content {
     padding: 40px;
@@ -187,22 +224,6 @@
     left: 50%;
     transform: translateX(-50%);
   }
-
-  @media screen and (max-width: 1024px) {
-    margin-top: calc(-137% + 113px);
-    transition: all 0.35s;
-    z-index: 0;
-  }
-  @media screen and (max-width: 768px) {
-    margin-top: calc(-163% + 113px);
-    transition: all 0.35s;
-    z-index: 0;
-  }
-  @media screen and (max-width: 650px) {
-    margin-top: calc(-330% + 113px);
-    transition: all 0.35s;
-    z-index: 0;
-  }
 }
 
 .acc-content.show {
@@ -211,55 +232,4 @@
 
 .acc-content.hidden {
   display: none;
-}
-
-.event-link {
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 15%;
-  font-family: Ubuntu;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-
-  padding-bottom: 100px;
-
-  a {
-    text-decoration: underline;
-    // text-decoration-style: dotted;
-    color: #0B6B6B;
-  }
-
-  @media screen and (max-width: 650px) {
-    font-size: 20px;
-  }
-}
-
-.events {
-  background-image: url(/images/bg-history-2.png),
-  url(/images/bg-history.png),
-  url(/images/bg-wr-team-2.png);
-  background-repeat: no-repeat;
-  background-position: right top,
-  left top 45%,
-  left top 100%;
-
-  background-size: 35% 70%, auto, auto;
-
-  padding-bottom: 150px;
-  padding-top: 100px;
-}
-
-@media screen and (max-width: 1024px) {
-  .wrapper-event {
-    height: 100%;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .wrapper-event {
-    height: 100%;
-    padding-bottom: 0px;
-  }
-}
 }
